custom.css fix code vertical align

--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -1,6 +1,10 @@
 /* DO NOT EDIT! */
 /* Automatically generated by the docusaurus-plugin-doxygen. */
 
+code {
+  vertical-align: baseline;
+}
+
 /* --- Begin DoxygenPage/styles.module.css --- */
 
 :root {
